samples/_failures_safe/1761621135_3865bb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a0aba55c.c: In function ‘main’:
./samples/SAFE/__tmp_a0aba55c.c:134:9: error: expected expression at end of input
  134 |         if (
      |         ^~
./samples/SAFE/__tmp_a0aba55c.c:134:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a0aba55c.c:134:9: error: expected declaration or statement at end of input
